(fix): Normalize spacing between composer and the popups

--- a/src/app/modules/composer/components/popup/popup.component.scss
+++ b/src/app/modules/composer/components/popup/popup.component.scss
@@ -48,8 +48,8 @@ m-composer__popup {
   .m-composerPopup__close {
     position: absolute;
     flex: initial;
-    top: 34px;
-    right: 37px;
+    top: 24px;
+    right: 40px;
     font-size: 16px;
     cursor: pointer;
 
@@ -67,8 +67,7 @@ m-composer__popup {
   flex-direction: column;
   align-items: stretch;
   justify-content: space-between;
-  margin: -8px 0 0 0;
-  padding: 37px 0 31px;
+  padding: 20px 0 20px;
 
   a {
     font-size: inherit;
@@ -89,7 +88,7 @@ m-composer__popup {
 
   .m-composerPopup__content {
     flex: 1;
-    padding: 0 37px;
+    padding: 0 40px;
   }
 
   .m-composerPopup__title {
@@ -252,7 +251,7 @@ m-composer__popup {
     flex-direction: row;
     align-items: center;
     justify-content: flex-end;
-    padding: 34px 37px 0;
+    padding: 20px 40px 0;
     border-top: 1px solid;
 
     @include m-theme() {
